--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -14,6 +14,12 @@ jobs:
       with:
         python-version: '3.11'
 
+    - name: Install System Dependencies (golangci-lint)
+      run: |
+        if [ -f "go.mod" ]; then
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b /usr/local/bin v1.60.2
+        fi
+
     - name: Run code linters (pre-commit)
       uses: pre-commit/action@v3.0.1
 
