--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,15 @@
-* @enzogaggiotti
+.dockerignore @enzogaggiotti
+Dockerfile @enzogaggiotti
+
+.github @enzogaggiotti
+.pre-commit-config.yaml @enzogaggiotti
+.gitignore @enzogaggiotti
+
+LICENSE @enzogaggiotti
+README.md @enzogaggiotti
+docs @enzogaggiotti
+
+cmd @enzogaggiotti
+internal @enzogaggiotti
+go.mod @enzogaggiotti
+go.sum @enzogaggiotti
